--- a/client/vocabulary_mogul/src/app/home/home.component.html
+++ b/client/vocabulary_mogul/src/app/home/home.component.html
@@ -4,7 +4,8 @@
         <p class="subheader">Welcome! Select a difficulty to test your knowledge.</p>
         <p class="subheader">Sign in to record your progress and begin your vocabulary journey today.</p>
     </div>
-    <app-login></app-login>
+    <app-login *ngIf="!userAuthenticated"></app-login>
+    <a *ngIf="userAuthenticated">Log Out</a>
     <div id="difficultyButtons">
         <a href="/quiz"><button class="btn btn-primary">Test your Knowledge!</button></a>
     </div>
