--- a/client/vocabulary_mogul/src/app/profile/profile.component.html
+++ b/client/vocabulary_mogul/src/app/profile/profile.component.html
@@ -1,3 +1,4 @@
-<p>{{ this.username}}</p>
+<p>{{ this.username }}</p>
 <a href="user-quiz">User quiz</a>
+<a href="review-quiz">Review quiz</a>
 <h1>Hello</h1>
