--- a/client/vocabulary_mogul/src/app/navbar/navbar.component.scss
+++ b/client/vocabulary_mogul/src/app/navbar/navbar.component.scss
@@ -42,3 +42,12 @@ a {
   .text-shadow {
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
+
+.authLink {
+    position: absolute;
+    opacity: 0;
+    &.active {
+        opacity:1;
+        position: relative
+    }
+}
