--- a/client/vocabulary_mogul/src/app/login/login.component.html
+++ b/client/vocabulary_mogul/src/app/login/login.component.html
@@ -1,15 +1,16 @@
 <div>
     <form (ngSubmit)="onSubmit()" id="loginForm">
         <div class="formInputs">
-        <div class="d-flex flex-column">
-            <label class="secondaryFont" for="username">Username</label>
-            <input type="text" name="username" id="username" placeholder="Username" [(ngModel)]="username" required>
+            <div class="d-flex flex-column">
+                <label class="secondaryFont loginText" for="username">Username</label>
+                <input type="text" name="username" id="username" placeholder="Username" [(ngModel)]="username" required>
+            </div>
+            <div class="d-flex flex-column">
+                <label class="secondaryFont loginText" for="password">Password</label>
+                <input type="password" name="password" id="password" placeholder="Password" [(ngModel)]="password"
+                    required>
+            </div>
         </div>
-        <div class="d-flex flex-column">
-            <label class="secondaryFont" for="password">Password</label>
-            <input type="password" name="password" id="password" placeholder="Password" [(ngModel)]="password" required>
-        </div>
-    </div>
-            <button type="submit" class="btn btn-success secondaryFont" id="loginButton">Log In</button>
+        <button type="submit" class="quizButton m-3 secondaryFont">Log In</button>
     </form>
 </div>
