--- a/client/vocabulary_mogul/src/app/register/register.component.html
+++ b/client/vocabulary_mogul/src/app/register/register.component.html
@@ -1,12 +1,14 @@
-<div class="col-lg-6">
+<div class="quizCard">
     <form (ngSubmit)="onSubmit()" id="registerForm">
         <div class="form">
+            <h1 class="mainHeader mainFont">Welcome to Vocabulary Mogul!</h1>
+            <h2 class="subHeader secondaryFont">Once you create an account, you will have a set of esoteric vocabulary words created for you to learn. You will be quizzed on these words until you are confident that you know them.</h2>
+            <h2 class="subHeader secondaryFont">To begin a quiz with your vocabulary set, select 'User Quiz'. To be quizzed on vocabulary you have conquered, select 'Review Quiz'.</h2>
+            <label for="username" class="mainFont subHeader">Create a Username</label>
             <input type="text" name="username" id="username" placeholder="Username" required [(ngModel)]="username">
-            <label for="username">Username</label>
+            <label for="password" class="mainFont subHeader">Create a Password</label>
             <input type="password" name="password" id="password" placeholder="Password" required [(ngModel)]="password">
-            <label for="password">Password</label>
-            <button type="submit" class="btn btn-success">Register</button>
+            <button type="submit" class="quizButton secondaryFont">Register</button>
         </div>
     </form>
-    <a class="subheader" href="/login">Already have an account? Log in here.</a>
 </div>
