--- a/client/vocabulary_mogul/src/styles.scss
+++ b/client/vocabulary_mogul/src/styles.scss
@@ -1,1 +1,140 @@
 /* You can add global styles to this file, and also import other style files */
+body, html {
+    box-sizing: border-box;
+}
+
+.loginText {
+    color: white;
+}
+
+.mainFont {
+    font-family: "SUSE", serif;
+    font-optical-sizing: auto;
+    font-weight: bold;
+    font-style: normal;
+}
+
+.secondaryFont {
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+
+.text-shadow {
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+/* Fade-out effect */
+.fade-out {
+    opacity: 0;
+    transition: opacity 0.5s ease-out;
+    /* Duration for fade-out */
+}
+
+.quizCard {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50rem;
+    height: 60rem;
+    background-color: white;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    padding: 3rem;
+    border-radius: 16px;
+    z-index: 4;
+}
+
+.quizAnswer {
+    font-size: 2rem;
+    margin: 50px auto 50px auto;
+    padding: .3rem;
+    transition: all .2s ease;
+
+    &:hover {
+        transform: scale(1.1);
+        background-color: rgb(130, 170, 207);
+        border-radius: 16px;
+    }
+
+    &.correct {
+        background-color: rgb(125, 255, 147);
+        border-radius: 16px;
+    }
+
+    &.incorrect {
+        background-color: rgb(255, 125, 125);
+        border-radius: 16px;
+    }
+
+    &.hidden {
+        opacity: 0;
+        height: 0;
+        padding: 0;
+        margin: 0;
+        z-index: -1;
+        overflow: hidden;
+    }
+}
+
+.quizHeader {
+    font-size: 4rem;
+    margin-bottom: 65px;
+}
+
+.loading {
+    font-size: 4rem;
+    color: white;
+}
+
+.question {
+    height: 80%;
+}
+
+.result {
+    height: 20%;
+}
+
+.quizButton {
+    background: rgb(130, 170, 207);
+    border-radius: 38px;
+    border: 0px transparent;
+    transition: all .2s;
+    width: 8rem;
+    height: 3rem;
+    font-size: 1.6rem;
+
+    &:hover {
+        transform: scale(1.1);
+        background: rgb(139, 255, 139);
+    }
+}
+
+.resultsDiv {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+input {
+    width: 24rem;
+    height: 3rem;
+    margin: 15px;
+    border: 4px solid rgb(138, 175, 255);
+    border-radius: 36px;
+    text-align: center;
+    font-size: 1.5rem;
+    transition: .5s all;
+    &:hover {
+        background-color: #c2ecff;
+        transform: scale(1.1);
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+
+    
+}
