UPDATE: Development Phase 1 complete

--- a/client/vocabulary_mogul/src/app/login/login.component.html
+++ b/client/vocabulary_mogul/src/app/login/login.component.html
@@ -11,6 +11,6 @@
                     required>
             </div>
         </div>
-        <button type="submit" class="quizButton m-3 secondaryFont">Log In</button>
+        <button type="submit" class="quizButton secondaryFont">Log In</button>
     </form>
 </div>
