--- a/client/vocabulary_mogul/src/app/home/home.component.html
+++ b/client/vocabulary_mogul/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-
+<div id="app">
 <div class="background-wrapper">
     <div *ngFor="let image of images; let i = index" class="backgroundImg"
         [style.backgroundImage]="'url(' + image + ')'"
@@ -6,10 +6,10 @@
 </div>
 <div id="overlay" [ngClass]="[containerState ? 'darkened' : '']"></div>
 <section class="text-center d-flex align-items-center flex-row" id="heroDiv">
-    <div class="w-50 m-auto p-5">
+    <div class="heroSubDiv">
         <h1 class="mainHeader mainFont text-shadow">Expand your Lexicon, at no cost to you. Begin your vocabulary
             journey today.</h1>
-        <h2 class="subHeader mainFont m-5 text-shadow">With over 500 complex vocabulary words, Vocabulary Mogul is a
+        <h2 class="subHeader mainFont text-shadow" id="mainSubHeader">With over 500 complex vocabulary words, Vocabulary Mogul is a
             revolutionary tool for
             writers,
             teachers, and students.</h2>
@@ -32,12 +32,10 @@
     <button class="quizButton secondaryFont m-3" (click)="logout()">Log Out</button>
     </div>
     <div class="d-flex flex-column">
-        <h3 class="subHeader mainFont text-shadow"><a class="subheader styledAnchor" href="/user-quiz">Daily
-                Vocabulary
-                Quiz</a></h3>
-        <h3 class="subHeader mainFont text-shadow mt-5"><a class="subheader styledAnchor" href="/review-quiz">ReviewVocabulary</a></h3>
+        <h3 class="subHeader mainFont text-shadow styledAnchor" (click)="renderQuiz('user')">User Vocabulary Quiz</h3>
+        <h3 class="subHeader mainFont text-shadow mt-5 styledAnchor" (click)="renderQuiz('review')">Review Vocabulary</h3>
     </div>
 </section>
-<button *ngIf="containerState" id="exitQuizBtn" class="secondaryFont subHeader" (click)="endContainer()">X</button>
 <ng-container #quizContainer></ng-container>
 <app-footer></app-footer>
+</div>
