--- a/client/vocabulary_mogul/src/app/home/home.component.scss
+++ b/client/vocabulary_mogul/src/app/home/home.component.scss
@@ -1,16 +1,29 @@
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
-    overflow: hidden; /* Prevents scrolling on the page */
+    overflow: hidden;
+    /* Prevents scrolling on the page */
     width: 100%;
     height: 100%;
-  }
+}
+
+#app {
+    min-height: 100vh;
+    overflow: hidden;
+}
 
 #heroDiv {
     position: relative;
     height: 80vh;
     z-index: 2;
     border-bottom: 26px solid black;
+}
+
+.heroSubDiv {
+    padding: 50px;
+    margin: auto;
+    width: 50%;
 }
 
 .backgroundImg {
@@ -41,9 +54,11 @@ html, body {
 .background-wrapper {
     position: absolute;
     width: 100%;
-    height: 100vh; /* Or any height you want for the main section */
-    overflow: hidden; /* Clips anything outside this container */
-  }
+    height: 100vh;
+    /* Or any height you want for the main section */
+    overflow: hidden;
+    /* Clips anything outside this container */
+}
 
 #overlay {
     position: absolute;
@@ -65,6 +80,10 @@ html, body {
 
 .mainHeader {
     font-size: 3.5em;
+}
+
+#mainSubHeader {
+    margin: 50px;
 }
 
 .subHeader {
@@ -137,23 +156,6 @@ html, body {
     /* Duration for fade-in */
 }
 
-#exitQuizBtn {
-    width: 2rem;
-    height: 2rem;
-    background: transparent;
-    border: 0px transparent;
-    z-index: 5;
-    position: absolute;
-    top: 14.5%;
-    left: 64.5%;
-    transform: translate(-50%, -50%);
-    transition: all .1s ease;
-
-    &:hover {
-        color: red;
-    }
-}
-
 .fillerDiv {
     width: 50%;
     margin: auto;
@@ -163,19 +165,111 @@ html, body {
 @keyframes slide {
     0% {
         transform: translateX(0);
-      }
-      100% {
-        transform: translateX(-9%); /* Slides left; adjust this for desired effect */
-      }
+    }
+
+    100% {
+        transform: translateX(-9%);
+        /* Slides left; adjust this for desired effect */
+    }
 
 }
 
-@media only screen and (max-width: 1200px) {
-    
+@media only screen and (max-width: 1600px) {
+
+    .background-image {
+        height: 65vh;
+    }
+
     .fillerDiv {
-        height: 0;
-        width: 0;
+        height: 0px;
+        width: 0px;
+        margin: 0px;
+    }
+
+    #heroDiv {
+        width: 100%;
+        height: 65vh;
+        border-bottom: none;
+    }
+
+    .heroSubDiv {
+        padding: 0px;
+        width: 90%;
     }
 
 
+    .login {
+        &.active {
+            background-color: black;
+            height: 50vh;
+        }
+    }
+
+    .styledAnchor {
+        margin: 35px;
+    }
+
+    #mainSubHeader {
+        margin: 30px;
+    }
+
+
+}
+
+@media only screen and (max-width: 1600px) {
+
+    #exitQuizBtn {
+        font-size: 1.5rem;
+        top: 13%;
+        left: 78%;
+    }
+
+
+
+}
+
+@media only screen and (max-width: 700px) {
+
+    .login {
+        flex-direction: column;
+
+        &.active {
+            height: 70vh;
+        }
+    }
+
+    .mainHeader {
+        font-size: 2.5rem;
+        margin-top: 30px;
+    }
+
+    .subHeader {
+        font-size: 1.5rem;
+    }
+
+
+}
+
+@media only screen and (max-height: 700px) {
+
+    .mainHeader {
+        font-size: 2.5rem;
+        margin-top: 30px;
+    }
+
+}
+
+@media only screen and (max-width: 400px) {
+
+
+    .login {
+
+        &.active {
+            height: 70vh;
+        }
+    }
+
+    .mainHeader {
+        font-size: 1.8rem;
+    }
 }
