FIX: Responsive Design

--- a/client/vocabulary_mogul/src/app/footer/footer.component.html
+++ b/client/vocabulary_mogul/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
 <section id="footer">
     <h1 class="mainFont text-white footerText">Designed by Jason LaGrasse. 2024</h1>
-    <h1><a class="mainFont footerText" href="https://www.cutoffdragon.com" target="_blank">cutOffDragon.com</a></h1>
+    <h1 class=" styledAnchor"><a class="mainFont styledAnchor footerText text-shadow" href="https://www.cutoffdragon.com" target="_blank">cutOffDragon.com</a></h1>
 </section>
