--- a/client/vocabulary_mogul/src/app/footer/footer.component.scss
+++ b/client/vocabulary_mogul/src/app/footer/footer.component.scss
@@ -11,6 +11,16 @@ a {
     text-decoration: none;
 }
 
+.footerText{
+}
+
+@media only screen and (max-width: 1600px) {
+
+    #footer {
+        background-color: rgba(0, 0, 0, 0.9);
+    }
+}
+
 @media only screen and (max-width: 1200px) {
 
     .footerText {
