--- a/client/vocabulary_mogul/src/app/quiz/quiz.component.html
+++ b/client/vocabulary_mogul/src/app/quiz/quiz.component.html
@@ -4,10 +4,11 @@
   </div>
   <button id="exitQuizBtn" class="secondaryFont subHeader" (click)="endContainer()">X</button>
   <div *ngIf='!showFinalResults' class="question">
-    <p class="fw-bold">Select the definition that matches the word:</p>
-    <h2 class="mainFont quizHeader">{{ vocabularyQuiz[currentQuestionIndex].word }}</h2>
+    <p class="fw-bold fade-in-animation">Select the definition that matches the word:</p>
+    <h2 class="mainFont quizHeader fade-in-animation">{{ vocabularyQuiz[currentQuestionIndex].word }}</h2>
     <ul>
-      <li class="secondaryFont quizAnswer" *ngFor="let option of vocabularyQuiz[currentQuestionIndex]?.options"
+      <li class="secondaryFont quizAnswer fade-in-animation2"
+        *ngFor="let option of vocabularyQuiz[currentQuestionIndex]?.options"
         (click)="!resultShown && submitAnswer(option)" [ngClass]="{
             'correct': option == correctAnswer && resultShown,
             'incorrect': option !== correctAnswer && option == currentSelection && resultShown,
@@ -17,15 +18,16 @@
       </li>
     </ul>
     <div class='result' *ngIf="resultShown">
-      <p class="secondaryFont fs-4">{{ resultMessage }}</p>
-      <button class="quizButton secondaryFont" *ngIf='resultShown' (click)="nextQuestion()">Next</button>
+      <p class="secondaryFont fs-4 fade-in-animation">{{ resultMessage }}</p>
+      <button class="quizButton secondaryFont fade-in-animation2" *ngIf='resultShown'
+        (click)="nextQuestion()">Next</button>
     </div>
   </div>
 
 
   <div class="resultsDiv" *ngIf="showFinalResults">
-    <p class="quizHeader mainFont">Final Score:</p>
-    <p class="quizHeader mainFont">{{ finalScore }}%</p>
-    <button class="quizButton secondaryFont" (click)="resetQuiz()">Reset</button>
+    <p class="quizHeader mainFont fade-in-animation">Final Score:</p>
+    <p class="quizHeader mainFont fade-in-animation">{{ finalScore }}%</p>
+    <button class="quizButton secondaryFont fade-in-animation2" (click)="resetQuiz()">Reset</button>
   </div>
 </div>
