FIX: Responsive Quiz Card dimensions

--- a/client/vocabulary_mogul/src/styles.scss
+++ b/client/vocabulary_mogul/src/styles.scss
@@ -191,6 +191,11 @@ input {
         margin-inline: auto;
     }
 
+    .quizCard {
+        width: 50rem;
+        height: 45rem;
+    }
+
 }
 
 @media only screen and (max-width: 1250px) {
